--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,9 +10,12 @@
       content="A bank for song concepts"
     />
     <link rel="apple-touch-icon" href="./images/logo.png" />
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600&display=swap" rel="stylesheet">
 
 <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 <script src="https://kit.fontawesome.com/4e97e5faaf.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="/path/to/simple-scrollbar.css">
+<script src="/path/to/simple-scrollbar.min.js"></script>
 
     <link rel="manifest" href="./manifest.json" />
 
