--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,7 +19,7 @@
 
     <link rel="manifest" href="./manifest.json" />
 
-    <title>React App</title>
+    <title>Track Bank</title>
   </head>
 
 
